# videorag

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
ImageBind/: requirements.txt
src/app/: package-lock.json  package.json  postcss.config.js  tailwind.config.ts
src/app/app/: globals.css  layout.tsx  page.tsx
src/app/app/index/: page.tsx
src/app/app/query/: page.tsx
src/app/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  textarea.tsx
src/backend/api/: dependencies.py  main.py
src/backend/api/routers/: __init__.py  indexing_router.py  library_router.py  query.py
src/backend/api/services/: __init__.py  generation_service.py  retrieval_service.py
src/backend/configs/: logging_config.yaml  main_config.yaml
src/backend/core/: __init__.py  resources.py  schemas.py
src/backend/core/models/: __init__.py  asr_model.py  llm_client.py  multimodal_encoder.py  text_encoder.py  vlm_model.py
src/backend/core/storage/: __init__.py  chunk_store.py  graph_store.py  metadata_store.py  vector_store.py
src/backend/core/utils/: decorators.py
src/backend/frontend_mock/lib/: utils.ts
src/backend/indexing/: main.py  pipeline.py
src/backend/indexing/tasks/: __init__.py  build_knowledge_graph.py  embed_chunks_and_clips.py  generate_initial_captions.py  persist_to_stores.py  segment_video.py  transcribe_audio.py
src/backend/indexing/utils/: __init__.py  video_processor.py
src/backend/serve/: modal_dep.py
src/backend/tests/: test_api_e2e.py.py
